feat: Implement muting CRUD (#396)
* feat: Implement muting CRUD

* fix: Tests

* fix: Remove unecessary index
